# Ironclad-AE

./: .gitignore  CMakeLists.txt
Apps/AnimEditor/: AnimEditorApp.swift  ContentView.swift  EngineHost.h  EngineHost.mm  GameView.swift  Info.plist
Apps/AnimEditor/Resources/: AppIcon.icns
Apps/AnimEditorWin/: AnimEditorHost.cpp  AnimEditorHost.hpp  README.md  SoldierModel.cpp  SoldierModel.hpp  main.cpp
Apps/Sandbox/: ContentView.swift  EngineHost.h  EngineHost.mm  GameView.swift  Info.plist  SandboxApp.swift
Engine/Animation/Core/: AnimationTypes.hpp
Engine/Animation/Debug/: AnimationDebug.cpp
Engine/Animation/IK/: IKSolver.cpp
Engine/Animation/Runtime/: AnimationClip.cpp  AnimationController.cpp  AnimationController.hpp  GaitConfig.hpp
Engine/Animation/Tests/: AnimationTests.cpp
Engine/Core/: Math.hpp  Types.hpp
Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Engine/Renderer/: IRenderer.hpp
Engine/Renderer/Metal/: MetalRenderer.mm
Engine/Simulation/: Components.hpp  Terrain.hpp  World.cpp  World.hpp
Tests/: CMakeLists.txt
